// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination can mount without pagination data 1`] = `

<div id="app">
  <!---->
</div>

`;

exports[`Pagination can render large pagination 1`] = `

<div id="app">
  <nav>
    <ul class="pagination justify-content-center">
      <li class>
        <a class>
          <i class="left chevron icon">
            «
          </i>
        </a>
      </li>
      <!---->
      <!---->
      <li class="page-item">
        <a class="page-link">
          1
        </a>
      </li>
      <li class="page-item active">
        <a class="page-link">
          2
        </a>
      </li>
      <li class="page-item">
        <a class="page-link">
          3
        </a>
      </li>
      <li class="page-item">
        <a class="page-link">
          4
        </a>
      </li>
      <li>
        <span class="pagination-ellipsis">
          …
        </span>
      </li>
      <li class="page-item">
        <a class="page-link">
          100
        </a>
      </li>
      <li>
        <a class>
          <i class="right chevron icon">
            »
          </i>
        </a>
      </li>
    </ul>
  </nav>
</div>

`;

exports[`Pagination can set the active page 1`] = `

<div id="app">
  <nav>
    <ul class="pagination justify-content-center">
      <li class>
        <a class>
          <i class="left chevron icon">
            «
          </i>
        </a>
      </li>
      <li class="page-item">
        <a class="page-link">
          1
        </a>
      </li>
      <!---->
      <li class="page-item active">
        <a class="page-link">
          2
        </a>
      </li>
      <!---->
      <li class="page-item">
        <a class="page-link">
          3
        </a>
      </li>
      <li>
        <a class>
          <i class="right chevron icon">
            »
          </i>
        </a>
      </li>
    </ul>
  </nav>
</div>

`;

exports[`Pagination will not display when there is only one page 1`] = `

<div id="app">
  <!---->
</div>

`;

exports[`Pagination will render links when there is more than one page 1`] = `

<div id="app">
  <nav>
    <ul class="pagination justify-content-center">
      <li class="disabled">
        <a class="disabled">
          <i class="left chevron icon">
            «
          </i>
        </a>
      </li>
      <li class="page-item active">
        <a class="page-link">
          1
        </a>
      </li>
      <!---->
      <li class="page-item">
        <a class="page-link">
          2
        </a>
      </li>
      <!---->
      <li class="page-item">
        <a class="page-link">
          3
        </a>
      </li>
      <li>
        <a class>
          <i class="right chevron icon">
            »
          </i>
        </a>
      </li>
    </ul>
  </nav>
</div>

`;
